--- a/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step3.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Step3.cshtml
@@ -78,13 +78,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -116,13 +116,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -149,13 +149,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -179,13 +179,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido2">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -217,13 +217,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -250,13 +250,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -280,13 +280,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido3">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"> </div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"> </div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li> 
@@ -327,13 +327,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido4">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"> </div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"> </div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -360,13 +360,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido5">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"> </div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"> </div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
