--- a/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Subst.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Areas/Admin/Views/Question/Subst.cshtml
@@ -79,13 +79,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -117,13 +117,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -150,13 +150,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -180,13 +180,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido2">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -218,13 +218,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelItemFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -251,13 +251,13 @@
                                     <ul data-bind="foreach:pv">
                                         <li data-bind="if: t=='p'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
                                         <li data-bind="if: t=='v'">
                                             <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                            <div class="left m-l5" data-bind="text:n"></div>
+                                            <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                             <div class="right m-t4" data-bind="click:$root.DelOtherFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                             <div class="clear"></div>
                                         </li>
@@ -281,13 +281,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido3">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"> </div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"> </div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
@@ -361,13 +361,13 @@
                             <ul data-bind="foreach:$root.Title_pic_vido5">
                                 <li data-bind="if: t=='p'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img1.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"></div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"></div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
                                 <li data-bind="if: t=='v'">
                                     <div class="left m-t4"><img src="~/Content/images/admin/img2.jpg"></div>
-                                    <div class="left m-l5" data-bind="text:n"> </div>
+                                    <div class="left m-l5" data-bind="text:n,click:$root.ViewImg"> </div>
                                     <div class="right m-t4" data-bind="click:$root.DelTitleFile"><img src="~/Content/images/admin/img3.jpg"></div>
                                     <div class="clear"></div>
                                 </li>
